--- a/app/src/main/res/layout/dialog_handout_info.xml
+++ b/app/src/main/res/layout/dialog_handout_info.xml
@@ -11,4 +11,12 @@
 
     </LinearLayout>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ll_content">
+
+    </android.support.v7.widget.RecyclerView>
+
 </RelativeLayout>
