--- a/app/src/main/res/layout/fragment_check.xml
+++ b/app/src/main/res/layout/fragment_check.xml
@@ -29,8 +29,7 @@
             android:layout_width="26dp"
             android:layout_height="26dp"
             android:layout_centerVertical="true"
-            android:background="@color/cardView"
-            app:srcCompat="@mipmap/censorship_title_one" />
+            app:srcCompat="@drawable/ic_bmjc_dengji" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -64,8 +63,7 @@
             android:layout_width="26dp"
             android:layout_height="26dp"
             android:layout_centerVertical="true"
-            android:background="@color/cardView"
-            app:srcCompat="@mipmap/censorship_title_two" />
+            app:srcCompat="@drawable/ic_local_file" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -99,8 +97,7 @@
             android:layout_width="26dp"
             android:layout_height="26dp"
             android:layout_centerVertical="true"
-            android:background="@color/cardView"
-            app:srcCompat="@mipmap/censorship_title_three" />
+            app:srcCompat="@drawable/ic_posted_bmjc" />
 
         <TextView
             android:layout_width="wrap_content"
