--- a/app/src/main/res/layout/fragment_directory.xml
+++ b/app/src/main/res/layout/fragment_directory.xml
@@ -38,42 +38,30 @@
 
     <RelativeLayout
         android:id="@+id/cv_layer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/search_bar"
         android:layout_marginRight="10dp"
-        android:background="@drawable/shadow_rr"
+        android:background="@drawable/ic_switch_map"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground">
 
-        <android.support.v7.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_margin="10dp"
-            app:srcCompat="@mipmap/ic_switch" />
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/cv_clear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/cv_layer"
         android:layout_marginRight="10dp"
-        android:background="@drawable/shadow_rr"
+        android:background="@drawable/ic_red_cancel"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:visibility="gone"
         tools:visibility="visible">
 
-        <android.support.v7.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_margin="10dp"
-            app:srcCompat="@mipmap/ic_quxiao" />
     </RelativeLayout>
 
     <android.support.v7.widget.CardView
@@ -116,39 +104,26 @@
 
     <RelativeLayout
         android:id="@+id/cv_space"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
         android:layout_below="@+id/cv_classifySearch"
         android:layout_marginLeft="10dp"
-        android:background="@drawable/shadow_rr"
+        android:background="@drawable/ic_space_black"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground">
 
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/aci_space"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_margin="10dp"
-            android:src="@mipmap/ic_kongjian" />
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/cv_classifySearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
         android:layout_below="@id/cv_statistics"
         android:layout_marginLeft="10dp"
-        android:background="@drawable/shadow_rr"
+        android:background="@drawable/ic_classify_black"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground">
 
-        <android.support.v7.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_margin="10dp"
-            app:srcCompat="@mipmap/ic_directory_false" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -163,69 +138,42 @@
         android:visibility="gone"
         tools:visibility="gone">
 
-        <android.support.v7.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
-            android:src="@mipmap/ic_quxiao" />
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/cv_my_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
+        android:layout_above="@+id/iv_zoom_in"
+        android:layout_alignParentRight="true"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
-        android:background="@drawable/shadow_rr"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/ic_location"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground">
 
-        <android.support.v7.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_margin="10dp"
-            app:srcCompat="@mipmap/ic_location" />
     </RelativeLayout>
 
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/iv_zoom_in"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
+        android:layout_above="@+id/iv_zoom_out"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="-5dp"
+        android:layout_marginRight="10dp"
+        app:srcCompat="@drawable/ic_zoom_in" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/iv_zoom_out"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/shadow_rr"
-        android:divider="@drawable/my_divider"
-        android:orientation="vertical"
-        android:showDividers="middle">
-
-        <RelativeLayout
-            android:id="@+id/aiv_zoom_in"
-            android:layout_width="@dimen/map_option_item_size"
-            android:layout_height="@dimen/map_option_item_size">
-
-            <android.support.v7.widget.AppCompatImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                app:srcCompat="@mipmap/ic_blow_up" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="@dimen/map_option_item_size"
-            android:layout_height="@dimen/map_option_item_size">
-
-            <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/aiv_zoom_out"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                app:srcCompat="@mipmap/ic_shrink" />
-        </RelativeLayout>
-    </LinearLayout>
+        app:srcCompat="@drawable/ic_zoom_out" />
 
     <include
         android:id="@+id/search_bar"
@@ -288,9 +236,9 @@
 
         <LinearLayout
             android:id="@+id/ll_title"
-            android:background="@android:color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/white"
             android:divider="@drawable/horizontal_divider"
             android:orientation="horizontal"
             android:padding="5dp"
