--- a/app/src/main/res/layout/fragment_unit.xml
+++ b/app/src/main/res/layout/fragment_unit.xml
@@ -187,7 +187,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        tools:visibility="visible">
+        tools:visibility="gone">
 
         <RelativeLayout
             android:id="@+id/bottom_drag_view"
