--- a/app/src/main/res/layout/item_submit_censorship_record.xml
+++ b/app/src/main/res/layout/item_submit_censorship_record.xml
@@ -38,7 +38,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="保存时间："
+            android:text="提交时间："
             android:textColor="#666666"
             android:textSize="12sp"
             android:id="@+id/tv_date"
