--- a/app/src/main/res/layout/item_expendlist_group.xml
+++ b/app/src/main/res/layout/item_expendlist_group.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-
-    >
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:id="@+id/rl_container"
@@ -23,36 +21,19 @@
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="张三"
                 android:minEms="4"
+                android:text="张三"
                 android:textColor="#333333"
                 android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/tv_uploading"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:text="证件上传"
-                android:textColor="@color/colorPrimary"
-                android:textSize="14sp" />
-
-            <ImageView
-                android:id="@+id/iv_state"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="8dp"
-                android:src="@mipmap/state" />
-
         </LinearLayout>
 
         <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:id="@+id/iv_holder_sj"
+            android:layout_width="17dp"
+            android:layout_height="17dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@mipmap/ic_arrow_drop_up_black_36dp"
-            android:id="@+id/iv_holder_sj"/>
+            android:src="@mipmap/arrow_down" />
 
         <TextView
             android:id="@+id/tv_date"
@@ -62,7 +43,8 @@
             android:layout_marginTop="8dp"
             android:text="证书有效日期："
             android:textColor="#666666"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/tv_date_content"
@@ -71,8 +53,32 @@
             android:layout_below="@+id/ll_container"
             android:layout_marginTop="8dp"
             android:layout_toRightOf="@+id/tv_date"
-            android:text="2016-11-29——2017-11-5" />
+            android:text="2016-11-29——2017-11-5"
+            android:textColor="@android:color/darker_gray" />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_toLeftOf="@id/iv_holder_sj"
+            android:gravity="center_horizontal"
+            android:layout_centerVertical="true"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iv_state"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_valid" />
+
+            <TextView
+                android:id="@+id/tv_uploading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="证件上传"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14sp" />
+        </LinearLayout>
     </RelativeLayout>
 
 
