--- a/app/src/main/res/layout/item_expendlist_item.xml
+++ b/app/src/main/res/layout/item_expendlist_item.xml
@@ -167,7 +167,8 @@
         android:paddingBottom="8dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:paddingTop="8dp">
+        android:paddingTop="8dp"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/tv_number"
